# multiuser-webchat

./: .gitignore  .pre-commit-config.yaml  nginx.conf  pyproject.toml  requirements-loadtest.txt
monitoring/grafana/provisioning/dashboards/: webchat.json
notebooks/: failure_metrics_analysis.ipynb  failure_metrics_analysis.py
src/server/: app.py  metrics.py  redis.py  ws.py
tests/load/: locustfile.py  scenarios.py
tools/: export_prometheus.py  phase1_baseline.sh  phase2_throughput_stress.sh  phase3_bandwidth_stress.sh  phase4_connection_stress.sh  phase5_bad_actor.sh  phase6_high_churn.sh  run_comprehensive_test.sh  run_load_test.sh
